tools/vendor/pin-project/tests/ui/cfg/packed_sneaky-span-issue-1.stderr
error: #[pin_project] attribute may not be used on #[repr(packed)] types
 --> tests/ui/cfg/packed_sneaky-span-issue-1.rs:7:15
  |
7 | #[hidden_repr(packed)] //~ ERROR may not be used on #[repr(packed)] types
  |               ^^^^^^
